--- a/src/assets/css/localization.css
+++ b/src/assets/css/localization.css
@@ -4,13 +4,8 @@
 	box-sizing: border-box;
 }
 
-.title {
-    font-family: "Alfa Slab One", serif;
-    font-size: 4.375rem;
-    margin-left: 6.25rem;
-    color: var(--cor-texto-light);
-    text-transform: uppercase;
-}
+
+
 
 .subtitle {
     font-size: 1.25rem;
@@ -23,14 +18,12 @@
     min-width: 320px;
     text-align: center;
     margin: 0 auto;
-    width: 100%;
     padding: 5%;
 }
 
 .banner_content {
     border-radius: 10px;
     width: 100%;
-    margin: 0 auto;
     
 }
 
@@ -46,11 +39,11 @@
 .map {
     text-align: left;
     margin-left: 10%;
-    width: 1200px;
+    max-width:1200px;
 }
 
 .map_content {
-    min-width: 500px;
+    min-width: 350px;
     max-width: 1100px;
     height: 500px;
 }
