--- a/src/assets/css/localization.css
+++ b/src/assets/css/localization.css
@@ -4,13 +4,9 @@
 	box-sizing: border-box;
 }
 
-
-
-
-.subtitle {
-    font-size: 1.25rem;
-    margin-left: 8.125rem;
-    margin-bottom: 1.875rem;
+.title_localization{
+    font-size: 32px;
+    padding: 50px 10px 50px 10%;
 }
 
 .banner {
