--- a/src/assets/css/admin_pages.css
+++ b/src/assets/css/admin_pages.css
@@ -47,8 +47,10 @@
 
 .table{
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
+    padding-top: 0%;
 }
 
 .input_form{
