--- a/client/src/assets/css/contact.css
+++ b/client/src/assets/css/contact.css
@@ -47,6 +47,16 @@
         font-size: 16px;
 }
 
+.form_contact .texto_problema{
+        width: 100%;
+        height: 75px;
+        border-radius: 12px;
+        border: none;
+        background-color: #f1f1f1;
+        padding-left: 5px;
+        font-size: 16px;
+}
+
 button{
         padding: 12px 15px;
         border: none;
