--- a/client/src/assets/css/shop.css
+++ b/client/src/assets/css/shop.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
 	margin: 0;
 	padding: 0;
@@ -10,6 +12,9 @@
 
 .tittle_shop h2{
     font-size: 64px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .tittle_shop p {
@@ -66,6 +71,9 @@
     text-align: left;
     padding-bottom: 20px;
     width: 300px;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 @media (max-width:1400px) {
