--- a/client/src/assets/css/admin_menu.css
+++ b/client/src/assets/css/admin_menu.css
@@ -12,18 +12,26 @@
 .menu_bar{
     display: flex;
     padding: 12px;
-    margin: 5px;
+    margin: 0 auto;
+    flex-direction: row;
+    text-align: center;
+}
+
+.menu_bar_link{
+    color: black;
+    text-decoration: none;
+    font-size: 1.2rem;
 }
 
 .menu_bar div{
-    width: 220px;
-    display: flex;
+    width: 100%;
     align-items: center;
     border-bottom:  solid 1px rgba(154, 148, 148, 0.588);
 }
 
 .container {
     display: flex;
+    flex-direction: column;
 }
 
 .outlet {
