--- a/client/src/assets/css/admin_pages.css
+++ b/client/src/assets/css/admin_pages.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: #f5f5f5;
-    width: 20%;
+    width: 100%;
 }
 
 .user_icon{
@@ -20,18 +20,6 @@
     font-size: 40px;
 }
 
-.menu_bar{
-    display: flex;
-    flex-direction: column;
-    padding: 12px;
-    margin: 5px;
-}
-
-.menu_bar div{
-    display: flex;
-    align-items: center;
-    border-bottom:  solid 1px rgba(154, 148, 148, 0.588);
-}
 
 .main_service{
     margin: 0 auto;
@@ -86,3 +74,29 @@
     cursor: pointer;
 }
 
+.header_table_row{
+   padding: 0 10px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+
+.header_table {
+    background-color: #f0f0f0;
+    font-weight: bold; 
+}
+
+.header_table_row {
+    border-bottom: 2px solid #ccc; 
+}
+
+td{
+    padding: 20px;
+}
+
+th{
+    padding: 25px;
+}
