--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+	
 }
 
 :root {
@@ -18,7 +19,9 @@
 body {
 	color: var(--cor-texto-light);
 	background-color: var(--cor-primaria-light);
-	font-family: "Inter", sans-serif;
+	font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .dark-theme {
@@ -42,10 +45,16 @@ body {
 	
 }
 
-.fa_bars{
+.nave_mobile{
+	text-align: center;
 	display: none;
-	color: white;
 }
+
+.icon_mobile{
+	padding: 0 20px;
+	font-size: 20px;
+}
+
 header {
 	position: sticky;
 	top: -5px;
@@ -249,7 +258,7 @@ footer .footer_footer .rodape_esc .rodape_botao {
 @media (max-width:1200px) {
 	.navegacao_botao{
 		display: none;
-	}.fa_bars{
+	}.nave_mobile{
 		display: block;
 	}
 }
